# system_call_and_socket_programing

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
app/: http_client_main.c  http_server_main.c
src/: calc.c  calc.h  http_calc.c  http_calc.h  http_client.c  http_client.h  http_request.c  http_request.h  http_request_io.c  http_request_io.h  http_response.c  http_response.h  socket_io.c  socket_io.h  target.c  target.h
tests/: calc_test.cpp  http_calc_test.cpp  http_client_test.cpp  http_request_test.cpp  http_response_test.cpp  target_test.cpp
